API methode add_message
